syntax = "proto3";

package notes.v1;

option go_package = "github.com/sundowndev/grpc-api-example/proto/notes/v1";

service NotesService {
  rpc ListNotes(ListNotesRequest) returns (stream ListNotesResponse) {};
  rpc AddNote(AddNoteRequest) returns (AddNoteResponse) {};
//  rpc ArchiveNote(ArchiveNoteRequest) returns (ArchiveNoteResponse) {};
}

message ListNotesRequest {}

message ListNotesResponse {
  Note note = 1;
}

message AddNoteRequest {
  string title = 1;
}

message AddNoteResponse {
  Note note = 1;
}

message Note {
  string id = 1;
  string title = 2;
  bool archived = 3;
}
